exports[`components/View prop "children" 1`] = `
<div
  className="rnw-View rnw-View-flexReset"
  style={Object {}}>
  <div
    className="rnw-View rnw-View-flexReset"
    data-testid="1"
    style={Object {}} />
</div>
`;

exports[`components/View prop "pointerEvents" 1`] = `
<div
  className="rnw-View rnw-View-flexReset __style_pebo"
  style={
    Object {
      "pointerEvents": null,
    }
  } />
`;

exports[`components/View prop "style" 1`] = `
<div
  className="rnw-View rnw-View-flexReset"
  style={Object {}} />
`;

exports[`components/View prop "style" 2`] = `
<div
  className="rnw-View"
  style={
    Object {
      "WebkitFlexBasis": "auto",
      "WebkitFlexGrow": 1,
      "WebkitFlexShrink": 1,
      "flexBasis": "auto",
      "flexGrow": 1,
      "flexShrink": 1,
      "msFlexNegative": 1,
      "msFlexPositive": 1,
      "msPreferredSize": "auto",
    }
  } />
`;

exports[`components/View prop "style" 3`] = `
<div
  className="rnw-View"
  style={
    Object {
      "WebkitFlexShrink": 1,
      "flexShrink": 1,
      "msFlexNegative": 1,
    }
  } />
`;

exports[`components/View prop "style" 4`] = `
<div
  className="rnw-View"
  style={
    Object {
      "WebkitFlexBasis": "auto",
      "WebkitFlexGrow": 1,
      "WebkitFlexShrink": 2,
      "flexBasis": "auto",
      "flexGrow": 1,
      "flexShrink": 2,
      "msFlexNegative": 2,
      "msFlexPositive": 1,
      "msPreferredSize": "auto",
    }
  } />
`;

exports[`components/View rendered element is a "div" by default 1`] = `
<div
  className="rnw-View rnw-View-flexReset"
  style={Object {}} />
`;

exports[`components/View rendered element is a "span" when inside <View accessibilityRole="button" /> 1`] = `
<button
  className="rnw-View rnw-View-flexReset"
  role="button"
  style={Object {}}
  type="button">
  <span
    className="rnw-View rnw-View-flexReset"
    style={Object {}} />
</button>
`;
